--- a/package.json
+++ b/package.json
@@ -1,8 +1,8 @@
 {
   "name": "@xsyx/nobatis",
-  "version": "1.0.0",
+  "version": "1.0.1",
   "description": "mybatis for node",
-  "main": "index.js",
+  "main": "src/index.js",
   "scripts": {
     "test": "node test/index.js"
   },
