--- a/package.json
+++ b/package.json
@@ -1,10 +1,11 @@
 {
   "name": "@xsyx/nobatis",
-  "version": "1.0.1",
+  "version": "1.0.3",
   "description": "mybatis for node",
-  "main": "src/index.js",
+  "main": "dist/index.js",
   "scripts": {
-    "test": "node test/index.js"
+    "start": "node test/index.js",
+    "build": "gulp compile"
   },
   "keywords": [
     "node",
@@ -13,12 +14,28 @@
   "author": "chenkuan",
   "license": "ISC",
   "dependencies": {
-    "orm": "^3.2.3"
+    "orm": "^3.2.4"
   },
   "directories": {
     "test": "test"
   },
-  "devDependencies": {},
+  "devDependencies": {
+    "@babel/core": "^7.2.2",
+    "@babel/preset-env": "^7.2.3",
+    "babel-preset-es2015": "^6.24.1",
+    "babel-preset-react": "^6.24.1",
+    "babel-preset-stage-0": "^6.24.1",
+    "browserify": "^16.2.3",
+    "gulp": "^4.0.0",
+    "gulp-babel": "^8.0.0",
+    "gulp-cli": "^2.0.1",
+    "gulp-concat": "^2.6.1",
+    "gulp-cssnano": "^2.1.3",
+    "gulp-rename": "^1.4.0",
+    "gulp-uglify": "^3.0.1",
+    "gulp-uglyfly": "^1.4.2",
+    "vinyl-source-stream": "^2.0.0"
+  },
   "repository": {
     "type": "git",
     "url": "git+https://github.com/MRchenkuan/nobatis.git"
